--- a/package.json
+++ b/package.json
@@ -30,24 +30,25 @@
     "url": "https://github.com/DataExperts/dexih-ngx-components/issues"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/animations": "^6.0.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "@compodoc/compodoc": "^1.1.2",
-    "@types/jasmine": "2.8.6",
+    "@types/jasmine": "2.8.7",
     "@types/node": "^10.0.0",
     "angular-in-memory-web-api": "^0.6.0",
     "codelyzer": "~4.3.0",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
-    "fs-extra": "^5.0.0",
+    "fs-extra": "^6.0.1",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.15.0",
@@ -56,29 +57,29 @@
     "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^2.0.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^1.0.0",
     "lite-server": "^2.3.0",
-    "ngx-bootstrap": "^2.0.4",
-    "ngx-md": "^3.1.1",
+    "ngx-bootstrap": "^3.0.0",
+    "ngx-md": "^6.0.0",
     "node-sass": "^4.9.0",
     "node-sass-tilde-importer": "^1.0.2",
     "node-watch": "^0.5.8",
     "protractor": "~5.3.1",
-    "rollup": "^0.58.2",
+    "rollup": "^0.59.2",
     "run-sequence": "^2.2.1",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.2.0",
     "systemjs": "^0.21.3",
     "ts-node": "~6.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.8.3",
+    "tslint": "~5.10.0",
+    "typescript": "2.7.2 <= x < 2.8.0",
     "zone.js": "^0.8.14"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "dependencies": {
-    "npm-check-updates": "^2.14.2"
+    "@angular/cli": "^6.0.3"
   }
 }
