added progress bar

--- a/package.json
+++ b/package.json
@@ -30,48 +30,48 @@
     "url": "https://github.com/DataExperts/dexih-ngx-components/issues"
   },
   "devDependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/cli": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@compodoc/compodoc": "^1.1.2",
+    "@angular/animations": "^6.1.2",
+    "@angular/cli": "^6.1.3",
+    "@angular/common": "^6.1.2",
+    "@angular/compiler": "^6.1.2",
+    "@angular/compiler-cli": "^6.1.2",
+    "@angular/core": "^6.1.2",
+    "@angular/forms": "^6.1.2",
+    "@angular/http": "^6.1.2",
+    "@angular/platform-browser": "^6.1.2",
+    "@angular/platform-browser-dynamic": "^6.1.2",
+    "@angular/router": "^6.1.2",
+    "@compodoc/compodoc": "^1.1.3",
     "@types/jasmine": "2.8.7",
-    "@types/node": "^10.0.0",
-    "angular-in-memory-web-api": "^0.6.0",
+    "@types/node": "^10.5.8",
+    "angular-in-memory-web-api": "^0.6.1",
     "codelyzer": "~4.3.0",
-    "concurrently": "^3.4.0",
-    "core-js": "^2.4.1",
+    "concurrently": "^3.6.1",
+    "core-js": "^2.5.7",
     "fs-extra": "^6.0.1",
     "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.4.0",
     "gulp-rollup": "^2.15.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^1.0.0",
-    "lite-server": "^2.3.0",
-    "ngx-bootstrap": "^3.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "lite-server": "^2.4.0",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-md": "^6.0.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.3",
     "node-sass-tilde-importer": "^1.0.2",
     "node-watch": "^0.5.8",
-    "protractor": "~5.3.1",
-    "rollup": "^0.59.2",
+    "protractor": "^5.3.2",
+    "rollup": "^0.59.4",
     "run-sequence": "^2.2.1",
-    "rxjs": "^6.2.0",
-    "systemjs": "^0.21.3",
-    "ts-node": "~6.0.1",
+    "rxjs": "^6.2.2",
+    "systemjs": "^0.21.4",
+    "ts-node": "^6.0.5",
     "tslint": "~5.10.0",
     "typescript": "2.7.2 <= x < 2.8.0",
     "zone.js": "^0.8.14"
@@ -80,7 +80,6 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/cli": "^6.0.3",
     "systemjs-plugin-babel": "0.0.25"
   }
 }
