added modal component

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dexih-ngx-components",
-  "version": "0.2.48",
+  "version": "0.2.52",
   "repository": {
     "type": "git",
     "url": "https://github.com/DataExperts/dexih-ngx-components"
@@ -21,11 +21,14 @@
   "jsnext:main": "dexih-ngx-components.js",
   "typings": "dexih-ngx-components.d.ts",
   "peerDependencies": {
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@angular/animations": "^6.0.0",
-    "rxjs": "^6.2.0",
-    "zone.js": "^0.8.14"
+    "@angular/core": ">= 6.0.0",
+    "@angular/common": ">= 6.0.0",
+    "@angular/forms": ">= 6.0.0",
+    "@angular/router": ">= 6.0.0",
+    "@angular/animations": ">= 6.0.0",
+    "rxjs": ">= 6.2.0",
+    "zone.js": ">= 0.8.14",
+    "ngx-md": ">= 6.0.0",
+    "ngx-bootstrap": ">= 3.0.0"
   }
 }
